--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         </div>
         <div class="introduce">
             <p>안녕하세요 컴퓨터융합학부 202102673 이다은입니다!</p>
-            <br>
             <p>앞으로 잘 부탁드립니다!</p>
+            <p>🎂2001.07.26</p>
+            <p>🥑INFJ</p>
         </div>
         <hr>
         <div class="contacts">
             <p class="name">Contact</p>
-            <p>🎂2001.07.26</p>
             <p>📞+(82)10-5878-5414</p>
             <p>📧delee2008@naver.com</p>
             <br>
